--- a/mlmonitor/credentials_example.cfg
+++ b/mlmonitor/credentials_example.cfg
@@ -1,13 +1,13 @@
 {
 "saas": {
-      "apikey": "xxxxx",
+      "apikey": "GI9rjpze4YRsHgosVxLnKy2HiZDYMgQnMiT-hXOerFjU",
       "wml_url": "https://us-south.ml.cloud.ibm.com",
       "wos_url": "https://api.aiopenscale.cloud.ibm.com",
-      "wos_instance_id": "xxxxxxxxxxxxxxxxx",
+      "wos_instance_id": "fb7864c969b640e29a59ee1365731e3b",
       "default_space": "xxxxx",
-      "cos_resource_crn" : "xxxxx",
-      "cos_endpoint" : "https://s3.us-east.cloud-object-storage.appdomain.cloud",
-      "bucket_name" : "xxxxx"
+      "cos_resource_crn" : "crn:v1:bluemix:public:iam-identity::a/fb7864c969b640e29a59ee1365731e3b::serviceid:ServiceId-1247bf81-9684-4f21-a89e-66f03b19d454",
+      "cos_endpoint" : "https://control.cloud-object-storage.cloud.ibm.com/v2/endpoints",
+      "bucket_name" : "cloud-object-storage-cos-standard-janc"
   },
   "prem": {
     "version": "4.x",
@@ -38,10 +38,10 @@
   },
   "aws" :
     {
-      "access_key": "xxxxx",
-      "role": "xxxxx",
-      "secret_key": "xxxxx",
-      "region_name": "xxxxx"
+      "access_key": "AKIAQ3EGQLAI5HZDICZ7",
+      "role": "Sagemaker execution role",
+      "secret_key": "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",
+      "region_name": "us-east-1"
     },
   "mlops_orchestrator" :
     {
