--- a/mlmonitor/credentials_example.cfg
+++ b/mlmonitor/credentials_example.cfg
@@ -38,10 +38,10 @@
   },
   "aws" :
     {
-      "access_key": "AKIAQ3EGQLAI5HZDICZ7",
-      "role": "Sagemaker execution role",
-      "secret_key": "AHImagOcsXSXldfqaZamqjg5oGlytt8GSYZ9F2po",
-      "region_name": "us-east-1"
+      "access_key": "xxxx",
+      "role": "xxxx",
+      "secret_key": "xxxx",
+      "region_name": "xxxx"
     },
   "mlops_orchestrator" :
     {
